chore(contracts): konsistenz-check & laufzeit/reminder-feature
- bestehenden Code aufgeräumt und vereinheitlicht (Kunden, Verträge, Sidebar, localStorage-Keys)
- Verträge erweitert um Laufzeit-Feld (3/5 Jahre)
- Enddatum automatisch berechnet (start + laufzeit)
- Reminder-Feld (start + 3y - 3m) hinzugefügt
- Speicherung von laufzeit/endDate/reminderDate in localStorage
- UI angepasst: readonly-Felder für Enddatum/Reminder im DFS-CI-Stil

--- a/modules/analysis/index.html
+++ b/modules/analysis/index.html
@@ -31,7 +31,7 @@
     function render(){
       const contracts = JSON.parse(localStorage.getItem('dfs.contracts')||'[]');
       const a=getA();
-      const sum = Array.isArray(contracts)?contracts.reduce((acc,c)=>acc+(Number(c.annualPremium)||0),0):0;
+      const sum = Array.isArray(contracts)?contracts.reduce((acc,c)=>acc+(Number(c.premiumYear||c.annualPremium||c.annual||c.premium)||0),0):0;
       a.sumAnnual = sum;
       const pct = Number(localStorage.getItem('dfs.targetSavingsPct')||'15');
       document.getElementById('sumAnnual').textContent = fmt(a.sumAnnual||0);
