--- a/modules/contracts/index.html
+++ b/modules/contracts/index.html
@@ -37,6 +37,21 @@
         <input class="input" id="begin" data-testid="begin" type="date">
       </div>
       <div>
+        <label class="label" for="laufzeit">Laufzeit</label>
+        <select class="input" id="laufzeit" data-testid="laufzeit">
+          <option value="3">3 Jahre</option>
+          <option value="5">5 Jahre</option>
+        </select>
+      </div>
+      <div>
+        <label class="label" for="endDate">Enddatum</label>
+        <input class="input" id="endDate" data-testid="endDate" type="date" readonly>
+      </div>
+      <div>
+        <label class="label" for="reminderDate">Reminder</label>
+        <input class="input" id="reminderDate" data-testid="reminderDate" type="date" readonly>
+      </div>
+      <div>
         <label class="label" for="payCycle">Zahlweise</label>
         <select class="input" id="payCycle" data-testid="payCycle">
           <option value="jährlich">jährlich</option>
