--- a/modules/contracts/index.html
+++ b/modules/contracts/index.html
@@ -48,7 +48,7 @@
         <input class="input" id="endDate" data-testid="endDate" type="date" readonly>
       </div>
       <div>
-        <label class="label" for="reminderDate">Reminder</label>
+        <label class="label" for="reminderDate">Reminder (3 Jahre − 3 Monate)</label>
         <input class="input" id="reminderDate" data-testid="reminderDate" type="date" readonly>
       </div>
       <div>
