--- a/modules/dashboard/index.html
+++ b/modules/dashboard/index.html
@@ -12,19 +12,14 @@
     <div class="grid">
       <div class="card"><div class="label">Kunden</div><div id="nCustomers" style="font-size:28px;font-weight:700">0</div><div style="margin-top:8px"><a class="btn outline" href="../customers/index.html" target="_parent">Zur Kundenliste</a></div></div>
       <div class="card"><div class="label">Verträge</div><div id="nContracts" style="font-size:28px;font-weight:700">0</div><div style="margin-top:8px"><a class="btn outline" href="../contracts/index.html" target="_parent">Zu Verträgen</a></div></div>
-      <div class="card">
-        <div class="label">Analyse</div>
-        <div>Jahressumme: <strong id="sumAnnual">–</strong></div>
-        <div>Monatliche Ersparnis (Soll): <strong id="saving">–</strong></div>
-        <div>Risiko-Score: <strong id="risk">–</strong></div>
-        <div style="margin-top:8px">
-          <div class="label">Reminder (nächste 90 Tage)</div>
-          <div id="reminders">Keine</div>
-        </div>
-        <div style="margin-top:8px"><a class="btn outline" href="../analysis/index.html" target="_parent">Zur Analyse</a></div>
-      </div>
+      <div class="card"><div class="label">Analyse</div><div>Jahressumme: <strong id="sumAnnual">–</strong></div><div>Monatliche Ersparnis (Soll): <strong id="saving">–</strong></div><div>Risiko-Score: <strong id="risk">–</strong></div><div style="margin-top:8px"><a class="btn outline" href="../analysis/index.html" target="_parent">Zur Analyse</a></div></div>
     </div>
   </div>
+  <section id="upcoming-reminders" class="card" style="margin-top:16px;">
+    <h3>Demnächst fällig (≤ 90 Tage)</h3>
+    <div id="upcoming-list" class="stack"></div>
+  </section>
+  <div id="reminders" style="display:none"></div>
   <script>
     const fmt=(n)=> (Number(n)||0).toLocaleString('de-DE',{style:'currency',currency:'EUR'});
     function renderDashboard(){
@@ -62,5 +57,6 @@
       if(['dfs.contracts','dfs.analysis','dfs.customers'].includes(e.key)) renderDashboard();
     });
   </script>
+  <script src="./index.js"></script>
 </body>
 </html>
