feat(customers): kunden-detail zeigt verträge + „vertrag anlegen“ (customerId vorbelegt)

--- a/modules/contracts/index.html
+++ b/modules/contracts/index.html
@@ -73,6 +73,7 @@
         <input class="input" id="deductible" data-testid="deductible" inputmode="decimal" placeholder="optional">
       </div>
     </div>
+    <input id="c-customerId" name="customerId" type="hidden">
 
     <div class="toolbar">
       <button class="btn" id="btnAdd">Vertrag hinzufügen</button>
