--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <title>DFS Versicherungsanalyse</title>
   <link rel="icon" href="./favicon.ico">
   <link rel="stylesheet" href="./styles/base.css">
+  <script src="./scripts/format.js"></script>
+  <script src="./scripts/toast.js"></script>
   <style>
     /* minimal Navigation-Styles für Gruppen */
     .nav-group{margin:8px 0 4px;color:var(--muted);font-weight:700;padding:6px 12px;border-radius:12px}
