--- a/modules/contracts/index.html
+++ b/modules/contracts/index.html
@@ -6,6 +6,8 @@
   <title>Verträge</title>
   <link rel="stylesheet" href="../../styles/base.css">
   <link rel="stylesheet" href="../../styles/print.css" media="print">
+  <script src="../../scripts/format.js"></script>
+  <script src="../../scripts/toast.js"></script>
   <style>
     .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
     @media(max-width:900px){.grid{grid-template-columns:1fr}}
@@ -67,6 +69,7 @@
       <div>
         <label class="label" for="premiumYear">Jahresbeitrag (€/J)</label>
         <input class="input" id="premiumYear" data-testid="premiumYear" inputmode="decimal" placeholder="0,00">
+        <small id="c-jahresbeitragBrutto-hint" class="label" style="margin-top:4px"></small>
       </div>
       <div>
         <label class="label" for="coverage">Deckungssumme</label>
