--- a/modules/customers/index.html
+++ b/modules/customers/index.html
@@ -3,6 +3,9 @@
   <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kundenliste</title>
   <link rel="stylesheet" href="../../styles/base.css">
+  <link rel="stylesheet" href="../../styles/print.css" media="print">
+  <script src="../../scripts/format.js"></script>
+  <script src="../../scripts/toast.js"></script>
 </head>
 <body>
   <div class="card">
@@ -50,12 +53,12 @@
     }
     document.getElementById('search').addEventListener('input', render);
     document.getElementById('btn-save-cloud').onclick = async ()=>{
-      try{ await saveCustomersToCloud(); alert('In Cloud gespeichert'); }
-      catch(e){ console.error(e); alert('Cloud-Fehler beim Speichern'); }
+      try{ await saveCustomersToCloud(); dfsToast('In Cloud gespeichert','success'); }
+      catch(e){ console.error(e); dfsToast('Cloud-Fehler beim Speichern','error'); }
     };
     document.getElementById('btn-load-cloud').onclick = async ()=>{
-      try{ const cloud = await loadCustomersFromCloud(); setLocal(cloud||[]); render(); alert('Aus Cloud geladen'); }
-      catch(e){ console.error(e); alert('Cloud-Fehler beim Laden'); }
+      try{ const cloud = await loadCustomersFromCloud(); setLocal(cloud||[]); render(); dfsToast('Aus Cloud geladen','success'); }
+      catch(e){ console.error(e); dfsToast('Cloud-Fehler beim Laden','error'); }
     };
     render();
   </script>
