refactor(core): zentrale date-utils + guards + quota-toast; duplikate entfernt

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="./styles/base.css">
   <script src="./scripts/format.js"></script>
   <script src="./scripts/toast.js"></script>
+  <script src="./scripts/date.js"></script>
+  <script src="./scripts/storage.js"></script>
   <style>
     /* minimal Navigation-Styles für Gruppen */
     .nav-group{margin:8px 0 4px;color:var(--muted);font-weight:700;padding:6px 12px;border-radius:12px}
