--- a/modules/customers/index.html
+++ b/modules/customers/index.html
@@ -12,48 +12,68 @@
 <body>
   <div class="card">
     <h2>Kunden</h2>
-    <div style="display:flex;gap:8px;align-items:center;margin-bottom:8px">
-      <input class="input" id="search" placeholder="Suche Firma, Ansprechpartner, E‑Mail">
+    <div class="table-search">
+      <input id="customer-search" type="text" placeholder="Suche Kunde/Firma…">
       <a class="btn" href="../customer/index.html">Neu</a>
       <button class="btn outline" id="btn-save-cloud">In Cloud speichern</button>
       <button class="btn outline" id="btn-load-cloud">Aus Cloud laden</button>
     </div>
     <div class="card">
-      <table id="tbl">
-        <thead><tr><th>Firma</th><th>Ansprechpartner</th><th>E‑Mail</th><th>Telefon</th><th>Aktion</th></tr></thead>
-        <tbody></tbody>
+      <table id="customers-table" class="table">
+        <thead>
+          <tr>
+            <th class="sortable" data-key="firma">Firma</th>
+            <th class="sortable" data-key="ansprech">Ansprechpartner</th>
+            <th class="sortable" data-key="telefon">Telefon</th>
+          </tr>
+        </thead>
+        <tbody id="customers-body"></tbody>
       </table>
     </div>
   </div>
   <script type="module">
     import { loadCustomersFromCloud, saveCustomersToCloud, deleteCustomerFromCloud } from '../../scripts/firebase.js';
-    const KEY='dfs.customers'; const $=s=>document.querySelector(s);
-    function getLocal(){ try{ return JSON.parse(localStorage.getItem(KEY)||'[]'); }catch{ return []; } }
-    function setLocal(a){ try{ localStorage.setItem(KEY, JSON.stringify(a)); }catch(e){ try{ dfsToast('Speicherlimit erreicht! Bitte Daten exportieren.','error',4000); }catch{} } }
-    function render(){
-      const q=$('#search').value.trim().toLowerCase();
-      const list=(getLocal().filter(Boolean)).filter(c=>{
-        const hay=((c.firma||'')+' '+(c.ansprech||'')+' '+(c.email||'')).toLowerCase();
-        return !q || hay.includes(q);
+    const KEY='dfs.customers';
+    (function(){
+      let allCustomers = [];
+      function getLocal(){ try{ return JSON.parse(localStorage.getItem(KEY)||'[]'); }catch{ return []; } }
+      function setLocal(a){ try{ localStorage.setItem(KEY, JSON.stringify(a)); }catch(e){ try{ dfsToast('Speicherlimit erreicht! Bitte Daten exportieren.','error',4000); }catch{} } }
+      function renderCustomers(list){
+        const body = document.getElementById('customers-body');
+        if(!body) return;
+        if(!list || list.length===0){ body.innerHTML = '<tr><td colspan="3" class="text-secondary">Keine Kunden gefunden.</td></tr>'; return; }
+        body.innerHTML = list.map(c=>`
+          <tr onclick="location.href='../customer/index.html?id=${encodeURIComponent(c.id)}'">
+            <td>${c.firma||'—'}</td>
+            <td>${c.ansprech||'—'}</td>
+            <td>${c.telefon||'—'}</td>
+          </tr>`).join('');
+      }
+      function load(){ allCustomers = (getLocal().filter(Boolean)); renderCustomers(allCustomers); }
+      function applySearch(){
+        const q = (document.getElementById('customer-search')?.value||'').toLowerCase();
+        const filtered = allCustomers.filter(c=> (c.firma||'').toLowerCase().includes(q) || (c.ansprech||'').toLowerCase().includes(q) );
+        renderCustomers(filtered);
+      }
+      function applySort(key, dir){
+        allCustomers.sort((a,b)=>{ const va=(a[key]||'').toString().toLowerCase(); const vb=(b[key]||'').toString().toLowerCase(); if(va<vb) return dir==='asc'?-1:1; if(va>vb) return dir==='asc'?1:-1; return 0; });
+        applySearch();
+      }
+      document.addEventListener('DOMContentLoaded', ()=>{
+        load();
+        document.getElementById('customer-search')?.addEventListener('input', applySearch);
+        document.querySelectorAll('th.sortable').forEach(th=>{
+          th.addEventListener('click', ()=>{
+            const key = th.dataset.key; const current = th.classList.contains('asc')?'asc': th.classList.contains('desc')?'desc':'';
+            document.querySelectorAll('th.sortable').forEach(x=>x.classList.remove('asc','desc'));
+            const next = current==='asc'?'desc':'asc'; th.classList.add(next); applySort(key,next);
+          });
+        });
+        // keep cloud buttons
+        document.getElementById('btn-save-cloud').onclick = async ()=>{ try{ await saveCustomersToCloud(); dfsToast('In Cloud gespeichert','success'); } catch(e){ console.error(e); dfsToast('Cloud-Fehler beim Speichern','error'); } };
+        document.getElementById('btn-load-cloud').onclick = async ()=>{ try{ const cloud = await loadCustomersFromCloud(); setLocal(cloud||[]); load(); dfsToast('Aus Cloud geladen','success'); } catch(e){ console.error(e); dfsToast('Cloud-Fehler beim Laden','error'); } };
       });
-      const tbody=document.querySelector('#tbl tbody');
-      tbody.innerHTML = list.map(c=>`
-        <tr>
-          <td>${c.firma||''}</td><td>${c.ansprech||''}</td><td>${c.email||''}</td><td>${c.telefon||''}</td>
-          <td>
-            <a class="btn outline" href="../customer/index.html?id=${c.id}">Öffnen</a>
-            <button class="btn outline del" data-id="${c.id}">Löschen</button>
-          </td>
-        </tr>
-      `).join('');
-      tbody.querySelectorAll('.del').forEach(b=> b.onclick = async ()=>{
-        const id=b.getAttribute('data-id');
-        const next=getLocal().filter(x=>x.id!==id);
-        setLocal(next); try{ await deleteCustomerFromCloud(id); }catch{}
-        render();
-      });
-    }
-    document.getElementById('search').addEventListener('input', render);
+    })();
     document.getElementById('btn-save-cloud').onclick = async ()=>{
       try{ await saveCustomersToCloud(); dfsToast('In Cloud gespeichert','success'); }
       catch(e){ console.error(e); dfsToast('Cloud-Fehler beim Speichern','error'); }
