--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="./scripts/toast.js"></script>
   <script src="./scripts/date.js"></script>
   <script src="./scripts/storage.js"></script>
+  <script src="./scripts/io.js"></script>
   <style>
     /* minimal Navigation-Styles für Gruppen */
     .nav-group{margin:8px 0 4px;color:var(--muted);font-weight:700;padding:6px 12px;border-radius:12px}
