--- a/index.html
+++ b/index.html
@@ -31,17 +31,14 @@
       </div>
 
       <!-- SHELL-NAVIGATION -->
-      <nav class="nav">
-        <a href="#" class="active" data-target="./modules/dashboard/index.html">Dashboard</a>
-        <div class="nav-group">Kunden</div>
-        <div class="nav-sub">
-          <a href="#" data-target="./modules/customer/index.html">Kunden anlegen</a>
-          <a href="#" data-target="./modules/customers/index.html">Kundenliste</a>
-        </div>
-        <a href="#" data-target="./modules/contracts/index.html">Verträge</a>
-        <a href="#" data-target="./modules/analysis/index.html">Analyse</a>
-        <a href="#" data-target="./modules/print/index.html">PDF-Export</a>
-      </nav>
+      <ul class="sidebar-nav">
+        <li><a href="./modules/dashboard/index.html" target="content" class="nav-link active">Dashboard</a></li>
+        <li><a href="./modules/customer/index.html" target="content" class="nav-link">Kunden anlegen</a></li>
+        <li><a href="./modules/customers/index.html" target="content" class="nav-link">Kundenliste</a></li>
+        <li><a href="./modules/contracts/index.html" target="content" class="nav-link">Verträge</a></li>
+        <li><a href="./modules/analysis/index.html" target="content" class="nav-link">Analyse</a></li>
+        <li><a href="./modules/print/index.html" target="content" class="nav-link">PDF-Export</a></li>
+      </ul>
 
       <div style="margin-top:auto">
         <small style="color:var(--muted)">Version <span id="ver">1.3.0</span> – Björn Weber</small>
@@ -59,7 +56,15 @@
         </div>
       </div>
 
-      <iframe id="content" src="./modules/dashboard/index.html?v=20250829.1201"></iframe>
+      <iframe id="content" name="content" src="./modules/dashboard/index.html?v=20250829.1201" onload="
+        try{
+          const path = this.contentWindow.location.pathname.split('/modules/').pop();
+          document.querySelectorAll('.sidebar-nav .nav-link').forEach(a=>{
+            a.classList.remove('active');
+            if(a.getAttribute('href').includes(path)) a.classList.add('active');
+          });
+        }catch(e){}
+      "></iframe>
     </main>
   </div>
 
@@ -98,33 +103,21 @@
     import { saveAllDFSBlobs, loadAllDFSBlobs } from './scripts/firebase.js';
 
     const iframe = document.getElementById('content');
-    const links  = document.querySelectorAll('.nav a');
+    const links  = document.querySelectorAll('.sidebar-nav .nav-link');
 
-    function updateGroupActive(){
-      document.querySelectorAll('.nav-group').forEach(g => {
-        const sub = g.nextElementSibling;
-        const isActive = sub && sub.matches('.nav-sub') && !!sub.querySelector('a.active');
-        g.classList.toggle('active', isActive);
+    function setActive(href){
+      links.forEach(a=>{
+        a.classList.remove('active');
+        if(a.getAttribute('href')===href) a.classList.add('active');
       });
     }
-
-    function navigateTo(target){
-      links.forEach(n => n.classList.remove('active'));
-      const link = Array.from(links).find(n => n.dataset.target === target);
-      if (link) link.classList.add('active');
-      iframe.src = withVersion(target);
-      updateGroupActive();
-    }
-    window.navigateTo = navigateTo;
-
-    // Navigation: lädt Zielseite ins iframe + Active-State
+    // Navigation: lädt Zielseite ins iframe mit Cache-Busting + Active-State
     links.forEach(a => a.addEventListener('click', (e) => {
       e.preventDefault();
-      navigateTo(a.dataset.target);
+      const href = a.getAttribute('href');
+      setActive(href);
+      iframe.src = withVersion(href);
     }));
-
-    // initialer Zustand
-    updateGroupActive();
 
     // Toast helper
     const toast = (msg) => {
@@ -158,6 +151,22 @@
         console.error(e); toast('Fehler beim Laden');
       }
     });
+    // Standardseite markieren
+    setActive('./modules/dashboard/index.html');
+  </script>
+
+  <!-- Active-Link Script (non-module for safety) -->
+  <script>
+  (function(){
+    const links = document.querySelectorAll('.sidebar-nav .nav-link');
+    function setActive(href){
+      links.forEach(a=>{ a.classList.remove('active'); if(a.getAttribute('href')===href){ a.classList.add('active'); } });
+    }
+    links.forEach(a=>{
+      a.addEventListener('click', ()=>{ const href=a.getAttribute('href'); setActive(href); });
+    });
+    setActive('./modules/dashboard/index.html');
+  })();
   </script>
   <!-- deploy: codex-auto $(date) -->
 </body>
