feat(print): konfigurierbares branding (logos, header, footer) via config-modul

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="./modules/customers/index.html" target="content" class="nav-link">Kundenliste</a></li>
         <li><a href="./modules/contracts/index.html" target="content" class="nav-link">Verträge</a></li>
         <li><a href="./modules/analysis/index.html" target="content" class="nav-link">Analyse</a></li>
+        <li><a href="./modules/config/index.html" target="content" class="nav-link">Konfiguration</a></li>
         <li><a href="./modules/print/index.html" target="content" class="nav-link">PDF-Export</a></li>
       </ul>
 
