--- a/modules/print/index.html
+++ b/modules/print/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <div class="card">
+    <header class="print-header no-screen" id="print-header"></header>
     <h2>Bericht</h2>
     <div class="card" id="kunde"></div>
     <div class="card" style="margin-top:12px">
@@ -23,6 +24,7 @@
       <div style="margin-top:8px"><span class="label">Empfehlungen</span><div id="recs"></div></div>
     </div>
   </div>
+  <footer class="print-footer no-screen" id="print-footer"></footer>
   <script>
     const fmt=(n)=> (Number(n)||0).toLocaleString('de-DE',{style:'currency',currency:'EUR'});
     const customers = JSON.parse(localStorage.getItem('dfs.customers')||'[]');
@@ -52,6 +54,16 @@
     document.getElementById('risk').textContent = a.riskScore??'–';
     document.getElementById('warn').innerHTML = (a.warnings||[]).length? a.warnings.map(w=>`<div class="badge">${w}</div>`).join('') : '<span style="color:var(--muted)">Keine</span>';
     document.getElementById('recs').innerHTML = (a.recommendations||[]).length? a.recommendations.map(w=>`<div class="badge">${w}</div>`).join('') : '<span style="color:var(--muted)">Keine</span>';
+    // Print header/footer
+    try{
+      const cfg = JSON.parse(localStorage.getItem('dfs.config.print')||'null');
+      const head = document.getElementById('print-header');
+      const foot = document.getElementById('print-footer');
+      if(cfg){
+        if(head){ head.innerHTML=''; (cfg.logos||[]).forEach(url=>{ const img=document.createElement('img'); img.src=url; img.style.height='28px'; img.style.marginRight='8px'; head.appendChild(img); }); const h=document.createElement('h1'); h.textContent = cfg.headerText||'DFS Versicherungsanalyse'; head.appendChild(h); }
+        if(foot){ const version = localStorage.getItem('dfs.version')||'unversioniert'; const now=new Date(); const p=n=>String(n).padStart(2,'0'); const ts=`${p(now.getDate())}.${p(now.getMonth()+1)}.${now.getFullYear()}`; foot.textContent = `${cfg.footerText||''} – Version ${version}, gedruckt am ${ts}`; }
+      }
+    }catch{}
   </script>
 </body>
 </html>
