--- a/modules/analysis/index.html
+++ b/modules/analysis/index.html
@@ -9,12 +9,16 @@
   <script src="../../scripts/storage.js"></script>
   <script src="../../scripts/format.js"></script>
   <script src="../../scripts/date.js"></script>
+  <script src="../../scripts/nav.js"></script>
   <script src="../../scripts/toast.js"></script>
   <script src="./analysis.js" defer></script>
 </head>
 <body>
   <div class="card">
     <h2>Analyse</h2>
+    <div class="actions-top no-print">
+      <button class="btn-ghost" onclick="dfsNav.backOr('../dashboard/index.html')">← Zum Dashboard</button>
+    </div>
     <header class="print-header no-screen" id="print-header"></header>
     <div id="analysis-kpis" style="display:grid;grid-template-columns:repeat(2,1fr);gap:12px"></div>
     <h3 style="margin-top:16px">Warnungen</h3>
