--- a/modules/contracts/index.html
+++ b/modules/contracts/index.html
@@ -11,6 +11,7 @@
   <script src="../../scripts/nav.js"></script>
   <script src="../../scripts/date.js"></script>
   <script src="../../scripts/storage.js"></script>
+  <script type="module" src="../../scripts/firebase.js"></script>
   <script src="../../scripts/io.js"></script>
   <style>
     .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
@@ -96,6 +97,7 @@
       </div>
     </div>
     <input id="c-customerId" name="customerId" type="hidden">
+    <input id="c-contractId" name="contractId" type="hidden">
     <div class="card intern-only" style="margin-top:12px">
       <h4>Interner Vermerk (nur intern)</h4>
       <div id="c-internVermerk-view"></div>
