--- a/modules/customer/index.html
+++ b/modules/customer/index.html
@@ -10,6 +10,7 @@
   <script src="../../scripts/nav.js"></script>
   <script src="../../scripts/date.js"></script>
   <script src="../../scripts/storage.js"></script>
+  <script type="module" src="../../scripts/firebase.js"></script>
   <style>
     .grid{display:grid;grid-template-columns:repeat(2,1fr);gap:12px}
     @media (max-width:720px){.grid{grid-template-columns:1fr}}
@@ -200,6 +201,21 @@
       document.addEventListener('DOMContentLoaded', renderContractsSummary);
       window.__dfsCustomersRenderContractsSummary = renderContractsSummary;
     })();
+    // Auto-Save (Kunde)
+    function autoBindCustomerForm(){
+      const ids=['firma','ansprech','email','telefon','branche','mitarbeiter','umsatz','gruendung','standort'];
+      ids.forEach(k=>{ const el=document.getElementById(k); if(!el) return; el.addEventListener('input', ()=>{
+        const c = collect();
+        let arr = (window.dfsStore&&dfsStore.get)? dfsStore.get(KEY,[]) : getLocal();
+        const idx = arr.findIndex(x=>x.id===c.id);
+        if(idx>=0) arr[idx] = {...arr[idx], ...c, updatedAt:new Date().toISOString()}; else arr.push({...c, createdAt:new Date().toISOString(), updatedAt:new Date().toISOString()});
+        if(window.dfsStore&&dfsStore.set) dfsStore.set(KEY, arr); else setLocal(arr);
+        try{ dfsToast('Auto-Save Kunde','success'); }catch{}
+      }); });
+    }
+    document.addEventListener('DOMContentLoaded', autoBindCustomerForm);
+    // Initialer Cloud→Local Sync
+    document.addEventListener('DOMContentLoaded', async ()=>{ try{ if(window.dfsStore&&dfsStore.syncFromCloud){ await dfsStore.syncFromCloud('dfs.customers'); } }catch{} });
     // Print header/footer from config
     document.addEventListener('DOMContentLoaded', ()=>{
       try{
